--- a/bootcamp/exercises/week-1/css grid/chatoptimal/index.html
+++ b/bootcamp/exercises/week-1/css grid/chatoptimal/index.html
@@ -10,37 +10,37 @@
 <body>
   <div id="chat">
     <div id="friends">
-        <h3>Friends</h3>
+        <h3 id="title-friends">Friends</h3>
         <p>Freya</p>
         <p>Linda</p>
         <p>Kenan</p>
         <p>Theresa</p>
     </div>
     <div id="chatbox">
-        <div class="text-container left">
+        <div class="text-container-left">
             <p class="text">Hey</p>
             <p class="time">14:00</p>
         </div>
-        <div class="text-container left">
+        <div class="text-container-left">
             <p class="text">Hello?</p>
             <p class="time">14:31</p>
         </div>
-        <div class="text-container right">
+        <div class="text-container-right">
             <p class="text">Sorry, been busy</p>
             <p class="time">17:58</p>
         </div>
-        <div class="text-container left">
+        <div class="text-container-left">
             <p class="text">You work too much</p>
             <p class="time">17:59</p>
         </div>
-        <div class="text-container right">
+        <div class="text-container-right">
             <p class="text">Tell me about it</p>
             <p class="time">17:59</p>
         </div>
     </div>
     <div id="input">
-        <input type="text" placeholder="Type a message">
-        <div>Send</div>
+        <input id="i" type="text" placeholder="Type a message">
+        <div id="send">Send</div>
     </div>
 </div>
     </body>
