--- a/bootcamp/exercises/week-3/randomUser/index.html
+++ b/bootcamp/exercises/week-3/randomUser/index.html
@@ -2,11 +2,13 @@
 <html>
     <head>
     <title>jQuery101</title>
-    </head>
-    <body>
-     <script src="https://code.jquery.com/jquery-3.3.1.js" crossorigin="anonymous"></script>
-     <script src="main.js"></script>
-    <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="style.css">
+    </head>
+    
+    <body>
+        <div id="container"></div>
+        <script src="https://code.jquery.com/jquery-3.3.1.js" crossorigin="anonymous"></script>
+        <script src="main.js"></script>
     </body>
 </html>
